adding more responsive alterations

--- a/index.html
+++ b/index.html
@@ -37,8 +37,10 @@
                 <img src="images/pexels-nate-hovee-4656945.jpg" alt="picture of saguaro cacti in the desert">
                 <figcaption>Photo by Nate Hovee from Pexels</figcaption>
             </figure>
-            <p>The Lady of the Lake, her arm clad in the purest shimmering samite, held aloft Excalibur from the bosom
-                of the water, signifying by divine providence that I, Arthur, was to carry Excalibur. That is why I am
+            <p>The <a href="https://kingarthursknights.com/arthurian-characters/lady-of-the-lake/">Lady of the Lake</a>,
+                her arm clad in the purest shimmering samite, held aloft Excalibur from the bosom
+                of the water, signifying by divine providence that I, Arthur, was to carry <a
+                    href="https://www.britannica.com/topic/Excalibur-Arthurian-legend">Excalibur</a>. That is why I am
                 your king.</p>
             <p>Oh! Come and see the violence inherent in the system! Help, help, I'm being repressed! Well, I didn't
                 vote for you. Well, Mercia's a temperate zone! What a strange person. Well, what do you want?</p>
